koa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koa-deploy 
  labels:
    app: koa
spec:
  selector:
    matchLabels:
      app: koa
  replicas: 3 # запускает N подS
  template:
    metadata:
      labels:
        app: koa 
    spec:
      containers:
      - name: koa-container 
        image: workxrom/docker_test_koa:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4444 
          name: koaport
          protocol: TCP
