koa-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: koa-loadbalancer
spec:
  selector:
    app: koa-deploy 
  type: LoadBalancer
  ports:
    - port: 4445 
      targetPort: 4444 
      #protocol: TCP
    #- name: http
   #externalIPs:
    #- 192.168.3.144
