koa-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: koa-nodeport
  labels:
    name: koa-nodeport 
spec:
  type: NodePort
  selector:
    app: koa 
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - name: koaport
      port: 4444
      targetPort: koaport 
      nodePort: 31117
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)

#apiVersion: v1
#kind: Service
#metadata:
  #creationTimestamp: null
  #name: koa-nodeport
#spec:
  #type: NodePort
  #ports:
  #- name: http
    #port: 4444
    #targetPort: 4444
    #nodePort: 30001
  #selector: 
    #name: koa-deploy      
#status:
  #loadBalancer: {}
