koa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koa-service
spec:
  selector:
    app: koa 
  ports:
    - protocol: TCP
      port: 4444 
      targetPort: 4444
